ive just learnt that the factorial of a non-negative integer 'n' is the product of all positive integer less than or equal to 'n'

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <!-- <script src="./index.js"></script> -->
-    <script src="./recusiveFubunachiNumbers.js"></script>
+    <!-- <script src="./recusiveFubunachiNumbers.js"></script> -->
+    <script src="./recursiveFactorialOfANumber.js"></script>
   </body>
 </html>
