ive just added the Linear Searching Algorithm

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <body>
     <!-- <script src="./index.js"></script> -->
     <!-- <script src="./recusiveFubunachiNumbers.js"></script> -->
-    <script src="./recursiveFactorialOfANumber.js"></script>
+    <!-- <script src="./recursiveFactorialOfANumber.js"></script> -->
+    <!-- <script src="../algorithms101/lenearSearch.js" type="text/javascript"></script> -->
+    <!-- <script src="../algorithms101/linearSearch.js" ></script> -->
+    <script src="../algorithms101/linearSearch.js" type="text/javascript"></script>
+
+
   </body>
 </html>
